librechat/icons-ingress.yaml
---
# Ingress for icons service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librechat-icons
  namespace: librechat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: haproxy
  tls:
    - secretName: chat-sebaoffice-tls
      hosts:
        - chat.sebaoffice.ir
  rules:
    - host: chat.sebaoffice.ir
      http:
        paths:
          - path: /icons
            pathType: Prefix
            backend:
              service:
                name: librechat-icons
                port:
                  number: 80
